<resources>
    <string name="app_name">Day 03</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_the_service">How was the service?</string>
    <string name="sv_amazing">Amazing(20%)</string>
    <string name="sv_good">Good(18%)</string>
    <string name="sv_okay">Okay(15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip amount: $10</string>
</resources>